style: prevent text wrap

--- a/src/pages/HomePage/ServiceSection/ServiceSection.scss
+++ b/src/pages/HomePage/ServiceSection/ServiceSection.scss
@@ -54,6 +54,7 @@
       font-size: 1rem;
       letter-spacing: -1px;
       line-height: 1.25rem;
+      white-space: nowrap;
 
       div {
         overflow: hidden;
